--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@cap-js/cds-types": "^0.9.0"
   },
   "scripts": {
-    "start": "cds-serve"
+    "start": "cds-serve",
+    "watch-projeto": "cds watch --open projeto/webapp/index.html?sap-ui-xx-viewCache=false"
   }
 }
